# Timecard

./: .flake8  .gitignore  BUILDING.md  CHANGELOG.md  DEVELOPMENT.md  INSTALL.sh  LICENSE  MANIFEST.in  Makefile  README.md  codealike.json  com.codemouse92.timecard.yaml  exceptions.json  pyproject.toml  requirements.dev.txt  requirements.txt  run.py  settings.json  setup.cfg  setup.cfg.old.1  setup.py  setup.py.old  timecard-app-folder.spec  timecard-app.spec  timecard-app_folder.spec  timecard_app.spec  timecard_app_folder.spec  tox.ini
.githooks/: commit-msg  pre-commit
.github/: FUNDING.yml
.pybuild/cpython3_3.7_timecard-app/: .pydistutils.cfg
debian/: changelog  control  copyright  files  install  rules  timecard-app.links  watch
distribution_resources/: com.codemouse92.timecard.desktop  deb_dependencies  timecard.desktop
docs/: index.md
flatpak/: metadata  metadata.debuginfo
flatpak/export/share/applications/: com.codemouse92.timecard.desktop
share/metainfo/: com.codemouse92.timecard.appdata.xml
snap/: snapcraft.yaml
src/: timecard-app.py
src/timecard/data/: backup.py  settings.py  timelog.py
src/timecard/interface/: aboutview.py  app.py  appcontrols.py  editview.py  focus.py  interface.py  logview.py  notes.py  quitview.py  settingsview.py  systray.py  timecontrols.py  timedisplay.py  workspace.py
src/timecard/logic/: clock.py
src/timecard/resources/: about.txt
timecard/: __main__.py  main.py
timecard/data/: __init__.py  settings.py  timelog.py
timecard/interface/: __init__.py  about.py  aboutview.py  app.py  appcontrols.py  editview.py  interface.py  logview.py  notes.py  quit.py  quitview.py  settingspanel.py  systray.py  timecontrols.py  timedisplay.py  workspace.py
