[metadata]
name = Timecard-App
version = 2.0.7
description = Track time beautifully.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license_file = LICENSE
author = Jason C. McDonald
author_email = codemouse92@outlook.com
url = https://github.com/codemouse92/timecard
project_urls =
    Bug Reports = https://github.com/codemouse92/timecard/issues
    Funding = https://github.com/sponsors/CodeMouse92
    Source = https://github.com/codemouse92/timecard
keywords = time tracking office clock tool utility
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: X11 Applications :: Qt
    Natural Language :: English
    Operating System :: OS Independent
    Intended Audience :: End Users/Desktop
    Topic :: Office/Business
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
package_dir =
    = src
packages = find:
include_package_data = True
install_requires =
    PySide2>=5.15.0
    appdirs>=1.4.4
python_version = >=3.6, <4

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest

[options.entry_points]
gui_scripts =
    Timecard-App = timecard.__main__:main

[flake8]
max-line-length = 120
